chore: retire Kadre native runtime (#2071)